Document debug on Openshit. Cleanup main examples README file